add pictures into HTLM on index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     
-<button></button>
+<button>Suivant</button>
 
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><img src="images/lille photo.jpg" alt=""></li>
+    <li><img src="images/photocvGraffitiGOOD.jpeg" alt=""></li>
+    <li><img src="images/photocvLilleGrandPlace.jpg" alt=""></li>
     <li></li>
     <li></li>
     <li></li>
