--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
@@ -23,5 +24,6 @@
     <li></li>
 </ul>
 
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
