--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <li></li>
 </ul>
 
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="javascript/script.js"></script>
 </body>
 </html>
