test my code in course and add image to repo and HTML for livraison5/carousel

--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
 <button>Suivant</button>
 
 <ul>
-    <li><img src="images/lille photo.jpg" alt=""></li>
-    <li><img src="images/photocvGraffitiGOOD.jpeg" alt=""></li>
-    <li><img src="images/photocvLilleGrandPlace.jpg" alt=""></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><img class="active" src="images/6fbe94de-a192-4137-82b7-0344b74cbcb7.JPG" alt=""></li>
+    <li><img src="images/440bd061-29c4-45af-952f-baf450d3e8dd.JPG" alt=""></li>
+    <li><img src="images/bf7c46d8-91ba-46d3-81af-b8cb51aededa.JPG" alt=""></li>
+    <li><img src="images/fa2f1e0c-261c-4079-9dec-6a685aeaecf1.JPG" alt=""></li>
+    <li><img src="images/279b32b2-657a-4515-93ba-8b2f2073eb8e.JPG" alt=""></li>
+    <li><img src="images/3a087ea3-d5b5-468b-9eb5-d8edae184183.JPG" alt=""></li>
+    <li><img src="images/1ae56400-c216-4238-8e29-ea8e2d41515c.JPG" alt=""></li>
+    <li><img src="images/f1564c74-f406-4174-af97-6d935568bb1f.JPG" alt=""></li>
 </ul>
 
 <script type="text/javascript" src="javascript/script.js"></script>
